--- a/voxel_engine/voxel_engine.vcxproj
+++ b/voxel_engine/voxel_engine.vcxproj
@@ -151,20 +151,28 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Camera.cpp" />
+    <ClCompile Include="Chunk.cpp" />
     <ClCompile Include="Events.cpp" />
+    <ClCompile Include="Mesh.cpp" />
     <ClCompile Include="png_loader.cpp" />
     <ClCompile Include="Shader.cpp" />
     <ClCompile Include="Texture.cpp" />
+    <ClCompile Include="voxel.cpp" />
+    <ClCompile Include="VoxelRenderer.cpp" />
     <ClCompile Include="voxel_engine.cpp" />
     <ClCompile Include="Window.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Camera.h" />
+    <ClInclude Include="Chunk.h" />
     <ClInclude Include="Events.h" />
+    <ClInclude Include="Mesh.h" />
     <ClInclude Include="png_loader.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="Shader.h" />
     <ClInclude Include="Texture.h" />
+    <ClInclude Include="voxel.h" />
+    <ClInclude Include="VoxelRenderer.h" />
     <ClInclude Include="voxel_engine.h" />
     <ClInclude Include="Window.h" />
   </ItemGroup>
