--- a/voxel_engine/voxel_engine.vcxproj
+++ b/voxel_engine/voxel_engine.vcxproj
@@ -152,6 +152,7 @@
   <ItemGroup>
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="Chunk.cpp" />
+    <ClCompile Include="Chunks.cpp" />
     <ClCompile Include="Events.cpp" />
     <ClCompile Include="Mesh.cpp" />
     <ClCompile Include="png_loader.cpp" />
@@ -165,6 +166,7 @@
   <ItemGroup>
     <ClInclude Include="Camera.h" />
     <ClInclude Include="Chunk.h" />
+    <ClInclude Include="Chunks.h" />
     <ClInclude Include="Events.h" />
     <ClInclude Include="Mesh.h" />
     <ClInclude Include="png_loader.h" />
@@ -177,6 +179,8 @@
     <ClInclude Include="Window.h" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="crosshair.glslf" />
+    <None Include="crosshair.glslv" />
     <None Include="main.glslv" />
     <None Include="main.glslf" />
   </ItemGroup>
